--- a/Daurecard/appsettings.json
+++ b/Daurecard/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost; port=3306; database=DaurecardDb; user=root; password=root; Persist Security Info=False; Connect Timeout=300"
+    "DefaultConnection": "server=db; port=3306; database=DaurecardDb; user=root; password=root; Persist Security Info=False; Connect Timeout=300"
   }
 }
